--- a/quiz2.html
+++ b/quiz2.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div id="home"class="flex-center flex-column">
         <h1>Let's start the quiz!!</h1>
-        <a  class="btn"href="game.html">PLAY</a>
+        <a  class="btn"href="game2.html">PLAY</a>
         <a class="btn"href="highscores.html">HIGH SCORES</a>
         <a class="btn"href="landing_page.html">HOME</a>
       </div>
